fixed proficiencies list being off center

--- a/src/routes/chosenClass.css
+++ b/src/routes/chosenClass.css
@@ -1,5 +1,5 @@
 .proficiency-list{
-    width: 100%;
+    width: inherit;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
